--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,30 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script>
-        var WS = function () {
-
-            var socket;
-
-            return  {
-                connect: function () {
-                    socket = new WebSocket("ws://localhost:8080/notifoo/demo");
-                    socket.onmessage = function(event) {
-                        var entry = document.createElement("p");
-                        entry.innerHTML = event.data;
-                        document.getElementById('log').appendChild(entry);
-                    }
-                },
-                disconnect: function () {
-                    socket.close()
-                },
-                send: function (msg) {
-                    socket.send(msg)
-                }
-            };
-        }();
-
-    </script>
+    <script src="websocket.js"></script>
 </head>
 <body>
 
