added weird 'list' of current channels, possible to exit each channel with its own button. Also made first screenshot for historical purposes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,20 +7,28 @@
 </head>
 <body>
 
-<label>
-    Choose a channel:
-    <input id="newChannelName" type="text"/>
-</label>
+<section id="channels">
+    <label>
+        Choose a channel:
+        <input id="newChannelName" type="text"/>
+    </label>
 
-<button onclick="WS.connectChannel(document.getElementById('newChannelName').value)">Connect</button>
-<button onclick="WS.disconnect(document.getElementById('newChannelName').value);">Disconnect</button>
-<label>
-    Text:
-    <input id="msg" type="text"/>
-</label>
-<button onclick="WS.send(document.getElementById('newChannelName').value, document.getElementById('msg').value)">Send</button>
+    <button onclick="WS.connectChannel(document.getElementById('newChannelName').value)">Connect</button>
+</section>
 
-<div id="log"></div>
+<section id="messages">
+
+    <div id="log"></div>
+    <label>
+        Text:
+        <input id="msg" type="text"/>
+    </label>
+    <button onclick="WS.send(document.getElementById('newChannelName').value, document.getElementById('msg').value)">Send</button>
+
+
 
 </body>
+</section>
+
+
 </html>
