--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="websocket.js"></script>
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -14,6 +15,8 @@
     </label>
 
     <button onclick="WS.connectChannel(document.getElementById('newChannelName').value)">Connect</button>
+    <ul id="channelList"></ul>
+
 </section>
 
 <section id="messages">
@@ -25,10 +28,7 @@
     </label>
     <button onclick="WS.send(document.getElementById('newChannelName').value, document.getElementById('msg').value)">Send</button>
 
-
-
-</body>
 </section>
-
+</body>
 
 </html>
